--- a/archive.html
+++ b/archive.html
@@ -351,6 +351,83 @@ overflow-x:hidden;
 font-family: Verdana;">
 
 <br>
+<center><img src="https://i.imgur.com/pIedBae.gif"/><img src="https://i.imgur.com/pIedBae.gif"/></center>
+<br><br>
+<font size = 1><font color="#CBBBB1">
+<center>october . 25 . 2018</center>
+</font></font></font>
+<font size = 1><font color="#B1A69E">
+<br>
+hiiiii fluffies <img src="https://i.imgur.com/x4rca2I.gif"/><br>
+my lovely store is open and with an extremely cute layout !!!!<br>
+modesty aside, i'm really in love with the layout i made ♡ !<br>
+i'm so very happy to have decided to make a layout of my own. before i was not going to do it and i was going to use a platform, i thought it would make things easier ...<br>
+but i definitely think it's important that my store is as cute as possible and i'd like to do my best for that !!!<br>
+i used a subdomain for the store : https://shybunny.middlepot.com<br>
+it's all in portuguese because at least for now i'm giving priority to sales here in brazil, but i'm accepting some of these too ( i wrote more about it on the site )<br>
+<br>
+so, i made yesterday a very cute new flash game <img src="https://i.imgur.com/doqIwv1.gif"/><br>
+... not about halloween but i also posted one last year, remember ?<br>
+<br><br>
+
+<center><a href="https://middlepot.com/tinykittens" target="_blank"><img src="https://i.imgur.com/hsu8YwY.png"/></a></center>
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><br>
+i hope you like it, cats are the best <img src="https://i.imgur.com/QNshURw.gif"/><br>
+here it is, the melody i used for this little game :<br>
+<br><br>
+<center><sub><sub><img src="https://i.imgur.com/RUdU6ZM.gif"/></sub></sub>　<a href="https://files.catbox.moe/jtn4g0.mp3" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">play outside .mp3</font></a>　
+</center>
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><br>
+very playfull and cute, just like kittens !<br>
+and talking about cats, i have here a drawing that i did in ms paint :<br>
+<br><br>
+
+<center><img width="430px" height="auto" src="https://i.imgur.com/ZRN030i.png"/></center>
+</font></font></font>
+<br>
+
+<font size = 1><font color="#B1A69E">
+<br><br>
+now this is about halloween !!!<br>
+but of course you still don't know ...<br>
+these are cream and maurice, they are main characters in the game that i am making, that is halloween themed <img src="https://i.imgur.com/w8eNj1M.gif"/><br>
+they are twins and they are very great ♡<br>
+you will know more soon!<br>
+<br>
+today i want the post to be light, so i'll write about a slightly more personal subject, with some tips <img src="https://i.imgur.com/wkxTdyp.gif"/><br>
+<br><br>
+<center><sub><sub><img src="https://i.imgur.com/d81T42M.gif"/></sub></sub>　<b>q & a</b>　<sub><sub><img src="https://i.imgur.com/gCof63R.gif"/></sub></sub></center>
+<br><br>
+i once wrote about myself and my personality and i mentioned how i like to organize and improve myself, and how i like rules. as i always support the purity, happiness & comfort of people, why would i support rules being imposed to shape us ?<br>
+i know it can be confusing, but i actually think the rules, if handled correctly, can help us a lot to find out more about ourselves, and not shape ourselves to be something different, but the other way around.<br>
+social and behavioral rules can be very oppressive and force us to act in an uncomfortable way, to make us confused under the obligation to be accepted socially above being ourselves, and happy ; but by analyzing these kinds of rules and constantly questioning them, i could see that they actually made me realize who i really am ! by reading these rules and wondering if they really fit into my lifestyle and personality, i could see clearly what i wanted or not for my life. i could understand the principles and foundations of these rules, and where they "wanted us to go". usually social and behavioral rules have the general objective that you be a nice person and don't bother other people, and that is a good thing ; the problem is that these have very specific peculiarities that don't fit for anyone. all people feel uncomfortable and unhappy if they try to follow all these rules strictly because they don't fit everyone. in short, my solution to achieving a healthy life was to adapt these rules to my way !<br>
+i really like writing rules for myself and even having rules made for me, reading about all those rules and "good manners" that are supposed to make a "good person". i find it very productive and it helps me a lot to find myself individually rewriting these rules so that they still have their main good intention but in a way that is comfortable for me as a person. i can see how personally i could feel happy to follow some good, healthy rules as a way of reminders. i value a lot of rules that involve kindness, education and respect, as i believe that it is fundamental to have healthy relationships and it makes me happy ; it just happens that these rules are very "heavy" and try to change ourselves, but there are usually ways of interpreting and rewriting them that make them good and productive for our lives.<br>
+it is clear that some rules simply don't fit my life at all, and should be discarded. unfortunately, even striving to keep polite and sincere with people who question me about such "weird" attitudes that i choose for my life ( for example refusing to be in social events supposed to be important to my social life, but that doesn't make me happy ) people will still judge me negatively because i didn't obey "the rule". this is something we naturally suffer as a consequence of being truly honest and kind to ourselves, but it is also an important process in the pursuit of purity.<br>
+i really care about evaluating my behavior, in general. when we are busy with our tasks we may forget to take care of ourselves, so i believe it is very important to always stop from time to time and think "how am i feeling ?", "is my body feeling well ?". stop for drinking water, wash your face, eat a fruit, walking, adjusting the lighting... these simple things are primordial to maintain our physical and mental health. like this habit, when i'm interacting with other people i always evaluate my behavior to see if i'm expressing myself properly, if i'm being kind, sincere, if i'm being myself, if the conversation is being comfortable for me and the other person. this may seem maybe a little "obsessive", but if done in a healthy and natural way is very good and greatly improves our quality of life. all these "rules" are about doing my best and not letting myself get carried away by the things of life and forgetting about my health or being nice to people.<br>
+it's primordial not to expect other people's approval and social validation when defining your rules and lifestyle, but rather how you personally, from the heart, feel about it. of course, you will feel happy and satisfied in being a good person and not messing around, but it is completely different from pretending just to receive compliments, to feel included and correct. the most correct and valid you can be is yourself ♡<br>
+<br>
+i know it's a little difficult to understand, but i hope i have explained it clearly !!<br>
+happy halloween for you, be careful not to eat toooooo much candy <img src="https://i.imgur.com/cwyTIFV.gif"/><br>
+<br>
+<center><img src="https://i.imgur.com/sq9YSJH.gif"/></center>
+<br>
+xoxo <img src="https://i.imgur.com/ABmh1tt.gif"/><br>
+<br><br>
+</font></font></font>
+
+<br>
+
+<center><img src="https://i.imgur.com/pIedBae.gif"/><img src="https://i.imgur.com/pIedBae.gif"/></center>
+
+<br><br><br>
+
+<br>
 <center><img src="https://i.imgur.com/uVjxZcw.gif"/></center>
 <br><br>
 <font size = 1><font color="#CBBBB1">
