--- a/tiny-journal.html
+++ b/tiny-journal.html
@@ -361,6 +361,34 @@ enjooooy ~<br>
 <br><br><br>
 
 <div style="text-align:left">
+<center><font color="#CFA5A5">
+<img src="https://i.imgur.com/1p8cFQf.gif"><br><br>
+november . 29 . 2018<br>
+☆ potato being ☆
+</font>
+</center>
+<font color="#D8ACAC">
+<br><br>
+
+　　"Now you're a potato"<br>
+　　Our story begins with that phrase. And what does it mean? I don't know.<br>
+　　Let's try to understand together. At the end of the year everyone waits for 00:00 (midnight, if you don't know), to become simple and insignificant potatoes. How insignificant? Potatoes are also people!<br>
+　　In fact, potatoes require their potato rights! And what are these? I don't know.<br>
+　　Potatoes want the honest and straightforward right to be potatoes, but not any potatoes, they want to be you! That explains the sentence with which we begin our text.<br>
+　　But wait there, how do potatoes want to be us? I don't know.<br>
+　　Potatoes, not having their own rights, want our rights, of being potatoes. And what are our rights? I don't know.<br>
+　　How much do potatoes want from us? What rights do they seek in us? I don't know, and I don't know.<br>
+　　Or maybe I know; all they want is to have the right to taste us, just like we do with them!<br>
+　　"Now you're a potato", and what will you do? Savor a being potato!
+<br><br>
+<center>E N D</center>
+</font>
+
+<br><br><br>
+<center><font color="#b7aba8">- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</center>
+<br><br><br>
+
+<div style="text-align:left">
 <center><font color="#93B3A9">
 <img src="https://i.imgur.com/OFc43OT.gif"><br><br>
 october . 10 . 2018<br>
@@ -461,31 +489,6 @@ june . 03 . 2018<br>
 <br><br>
 <center>E N D</center>
 </font>
-
-
-<br><br><br>
-<center><font color="#b7aba8">- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</center>
-<br><br><br>
-
-
-<div style="text-align:left">
-<center><font color="#93B3A9">
-<img src="https://i.imgur.com/OFc43OT.gif"><br><br>
-march . 09 . 2018<br>
-☆ lovey dovey ☆
-</font>
-</center><font color="#A9CBC1">
-<br>
-　　puft puft puf ,<br>
-　　i came here to see you !<br><br>
-
-　　fluft fluft fluff ,<br>
-　　i came here to kiss you !!<br><br>
-
-　　pomft pomft pomf ,<br>
-　　i want to love you !!!<br><br>
-</font>
-
 
 
 
