--- a/moep.html
+++ b/moep.html
@@ -492,6 +492,7 @@ let's get to know them with this quick introduction :
 #link3 { color: #DADAE9; border-bottom:1px solid #D7C4C4; }
 #link4 { color: #ffe08c; border-bottom:1px solid #D7C4C4; }
 #link5 { color: #ffc4c4; border-bottom:1px solid #D7C4C4; }
+#link6 { color: #d1bdad; border-bottom:1px solid #D7C4C4; }
 </style>
 <center>
 <div style="font-size: 10px;">
@@ -499,6 +500,8 @@ let's get to know them with this quick introduction :
 </div><br>
 <div style="font-size: 10px;">
 <font face="verdana">
+<font face="verdana" color="#af9b8b">⁽ ³ ⁺ ¹ ⁾</font> <a title="#initial p" href="https://files.catbox.moe/0ze0ym.mp3" id="link6" target="_blank">let's just... ♡ .mp3</a><br>
+<br>
 <font face="verdana" color="#e89d9d">⁽ ³ ⁺ ¹ ⁾</font> <a title="#lucky vacuum" href="https://files.catbox.moe/lskn1r.mp3" id="link5" target="_blank">my ❤１００％ for u .mp3</a><br>
 <br>
 <font face="verdana" color="#edd18b">⁽ ³ ⁺ ⁴ ⁾</font> <a title="#initial p" href="https://files.catbox.moe/w96wkd.mp3" id="link4" target="_blank">⋆☆﻿✩﻿☆✩﻿☆﻿⋆ .mp3</a><br>
