--- a/gaming.html
+++ b/gaming.html
@@ -813,6 +813,41 @@ more shots <a href="https://goo.gl/photos/wYNb5uykMBGrwuJm9" id="linkhm" target=
 <div class="wrapper">
 <br>
 <center><sub><img src="https://i.imgur.com/CARPAP1.gif"/></sub>　
+カスタムキャスト　- custom cast -
+　<sub><img src="https://i.imgur.com/CARPAP1.gif"/></sub></center>
+<br><br>
+<div class="tooltip">
+<div style ="width: 380px; height: 286px; overflow: auto; overflow-x: hidden; text-align: justify;">
+<div style ="width: 370; height: auto; overflow-y: hidden; overflow-x: hidden; text-align: justify;">
+this is officially the best character creation game in the universe ♡ !!!<br>
+i'm totally in love with it, i made myself and i'm honestly having a lot of fun, i can'tt get tired of trying on clothes and playing with the poses and angles ~<br>
+cutest app ever, i'm so happy i found it ♡
+</div>
+<br><br>
+<center>
+<img width="300" height="auto" src="https://i.imgur.com/5uuTCtZ.png"/><br><br>
+<img width="250" height="auto" src="https://i.imgur.com/pJhAX2U.png"/><br><br>
+<img width="250" height="auto" src="https://i.imgur.com/NE7vHN2.png"/><br><br>
+<img width="250" height="auto" src="https://i.imgur.com/6uZ78q2.png"/><br><br>
+<img width="250" height="auto" src="https://i.imgur.com/NrFm2N5.png"/><br><br>
+<img width="250" height="auto" src="https://i.imgur.com/cc1WZXl.png"/><br><br>
+<img width="250" height="auto" src="https://i.imgur.com/KrCbCsb.png"/><br><br>
+<img width="250" height="auto" src="https://i.imgur.com/qx7T5MN.png"/><br><br>
+<img width="250" height="auto" src="https://i.imgur.com/7ulnWPM.png"/><br><br>
+<img width="250" height="auto" src="https://i.imgur.com/OCof8vq.png"/><br><br>
+<img width="250" height="auto" src="https://i.imgur.com/cPMoZv6.png"/><br><br>
+<img width="250" height="auto" src="https://i.imgur.com/Zy3hVli.png"/><br><br>
+
+<br><br></center>
+
+</div>
+</div>
+</div>
+
+<br><br>
+<div class="wrapper">
+<br>
+<center><sub><img src="https://i.imgur.com/CARPAP1.gif"/></sub>　
 ᗩ ᑎ I ᗰ ᗩ ᒪ　ᑕ ᖇ O ᔕ ᔕ I ᑎ G
 　<sub><img src="https://i.imgur.com/CARPAP1.gif"/></sub></center>
 <br><br>
@@ -1128,6 +1163,29 @@ i'm really enjoying it, although it's a bit too easy, so i know it will be borin
 <br>
 <center>more styles <a href="https://photos.app.goo.gl/nKoAmelMxYC7HxbA3" id="linkhm" target="_blank">here</a> !</center>
 <br><br>
+
+</div>
+</div>
+</div>
+
+<br><br>
+<div class="wrapper">
+<br>
+<center><sub><img src="https://i.imgur.com/CARPAP1.gif"/></sub>　
+m o n s t e r　g i r l
+　<sub><img src="https://i.imgur.com/CARPAP1.gif"/></sub></center>
+<br><br>
+<div class="tooltip">
+<div style ="width: 380px; height: 286px; overflow: auto; overflow-x: hidden; text-align: justify;">
+<div style ="width: 370; height: auto; overflow-y: hidden; overflow-x: hidden; text-align: justify;">
+i've been testing loooots of dress up games recently, and they usually don't get my attention, but this one is definitely worth it !!!<br>
+i'll certainly post here some cute girls that i made ♡ !!<br>
+</div>
+<br><br>
+<center>
+<img width="300" height="auto" src="https://i.imgur.com/EWzT245.png"/>
+
+<br><br></center>
 
 </div>
 </div>
