--- a/archive.html
+++ b/archive.html
@@ -351,6 +351,99 @@ overflow-x:hidden;
 font-family: Verdana;">
 
 <br>
+<center><img src="https://i.imgur.com/BrnUzQj.gif"/></center>
+<br><br>
+<font size = 1><font color="#CBBBB1">
+<center>november . 08 . 2018</center>
+</font></font></font>
+<font size = 1><font color="#B1A69E">
+<br>
+hiiiiii fluffies <img src="https://i.imgur.com/F7n3tr1.gif"/><br>
+i'm having lots of ideas for projects, but it's hard to organize time for all things <img src="https://i.imgur.com/jWbPi5L.gif"/><br>
+i'm planning new things for the store, i'm sooooo happy with the progress !!!<br>
+things are definitely exceeding my expectations ♡<br>
+i'll not tell you my plans for now, since i still have to try hard to make it happen the way i want it <img src="https://i.imgur.com/f8eY1ju.gif"/><br>
+i just have to thank you a lot for the messages and the affection i receive, it makes me always motivated to do my best ♡ !<br>
+<br>
+this post will be a little long, so i'll start right away with the things i did last week !<br>
+i'll start with this beautiful collage, which i was planning to do for some time :<br>
+<br><br>
+
+<center><img width="350px" height="auto" src="https://i.imgur.com/607F4BU.png"/></center>
+<br><br>
+<center><sub><sub><img src="https://i.imgur.com/NmtLB9T.gif"/></sub></sub>　<a href="https://mega.nz/#!FxZTBKoK!m7ND43Kn03kBc2Mx8cykq0n1X45I6O5EqzsX0xQKAVM" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">midnight angel html .rar</font></a>　</center>
+</font></font></font>
+<br>
+
+<font size = 1><font color="#B1A69E">
+<br><br>
+yes.. if you know <a text-decoration: none; href="https://www.instagram.com/mjolktander" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 1px; font-size:10px;">𝔪𝔞𝔧𝔞</font></a>, you know that most of these photos are hers ♡ !!<br>
+it's truly an ethereal aesthetic, don't you think ?<br>
+i believe that no one is better than her to represent it <img src="https://i.imgur.com/Eodogd5.gif"/><br>
+it was a great experience for me to deal with so different color tones together !<br>
+i feel like i usually run away from dark colors on almost anything, but they also represent a part of who i am, it's important that i practice more how to use them within my aesthetic !<br>
+<br>
+here's the melody i used, i think it matched perfectly :<br>
+<br><br>
+<center><sub><sub><img src="https://i.imgur.com/RUdU6ZM.gif"/></sub></sub>　<a href="https://files.catbox.moe/nn4ylm.mp3" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">moonlight .mp3</font></a>　
+</center>
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><br>
+with kinda the same aesthetic, i made a page in html that is very simple, but it is somehow very important for me.<br>
+of course, with matching url ( soft.root.sx )<br>
+i've always wanted to do something like this in html, but it's strangely time-consuming, even though it looks so simple <img src="https://i.imgur.com/P7CUMWo.gif"/><br>
+it's pretty nonsense, but i really put some feelings into it, so i hope you like it ♡<br>
+<br><br>
+
+<center><img width="350px" height="auto" src="https://i.imgur.com/17h6Kes.png"/></center>
+<br><br>
+<center><sub><sub><img src="https://i.imgur.com/NmtLB9T.gif"/></sub></sub>　<a href="https://mega.nz/#!ZlA3WACZ!M4WhJK6Quc2y_7ry5IrfGfPZzxYq2VMGCWXGDu-GU-M" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">sofffffft .rar</font></a>　</center>
+</font></font></font>
+<br>
+
+<font size = 1><font color="#B1A69E">
+<br><br>
+um, as i've been writing a lot lately, i can't help but put two texts per post <img src="https://i.imgur.com/nsTCGtl.gif"/><br>
+i'm just extremely inspired, i really hope it's not tiring for you ///<br>
+the first one is about cuteness & femininity, the second one is about group behavior !<br>
+<br><br>
+<center><sub><sub><img src="https://i.imgur.com/d81T42M.gif"/></sub></sub>　<b>q & a</b>　<sub><sub><img src="https://i.imgur.com/gCof63R.gif"/></sub></sub></center>
+<br><br>
+　✄ ⅰ<br>
+people have always had a problem with female stereotypes. there is pressure on the girls to be always cute, feminine and delicate. i totally disapprove of people trying to shape the personality of people for the purpose of making them "ideal" within stereotypes ; although girls and boys have hormones that bring tendencies in tastes, desires and looks, a person's sex has no relation to her personality, since that is something much deeper. i agree that girls and boys should not change their personality with the intention of feeling "fit" in society, since this behavior causes sadness, confusion, problems and unhealthy relationships.<br>
+but, in the search of freedom of aesthetics and mannerisms people began to always treat these feminine adjectives as if they were something inferior and undesirable. i have read countless times about how "being cute and delicate is desirable in society because they want women to be weak and controllable", and no, that's not a correct way to talk about it !!!<br>
+the cuteness, delicacy and elegance are feminine characteristics, and just like the masculine characteristics, are tendencies but not facts. a girl may have more masculine characteristics, and vice versa ; there is nothing wrong with that. in nature the feminine and the masculine work together and form all that exists of good ( and bad ), it's the balance of things. the personality of people is complex and there are no sex tendencies that change a person completely, so of course you should not change who you are because of that ; but wanting to reject your natural feminine qualities because you somehow think that male qualities are better, is a very serious problem. it is actually offensive to the female image.<br>
+makes me deeply sad as people speak as if being soft and delicate is a sign of weakness and inferiority when there is no connexion between these things. to say that being feminine is a bad thing and that we must fight not to appear feminine and delicate for not to be treated in a bad way is so extremely wrong !!<br>
+girls and boys in nature have strength, endurance and power equally, only represented in different ways. matriarchal and patriarchal societies are focused on these forces : motherhood & paternity. these are the most natural and pure in both, both take care of each other as family, both have different but equally important roles. the problem is that patriarchal society often makes it seem that the male strenght is desirable and important, that physical strength, dominance, and logical reasoning are the best, that emotional intelligence, kindness, and wisdom are weak. this is not true, because there is not one better than the other ( and i've written about this before ).<br>
+in fact, the female image is also very associated with beauty. this obviously doesn't mean that girls should be beautiful, but i would like to comment that this type of beauty is associated with health and youth, since it is something that is naturally bright and wonderful related to fertility. in this way, while healthy, pure and natural, feminine beauty is something that i appreciate a lot and that i also think should not be treated as objectification ; the real objectification is the plastic and artificial way the girls force themselves to be to have social approval.<br>
+so yes, if your personality have cuteness and femininity, it doesn't mean that you are inferior or childish. you should not be ashamed of it or try to become more masculine ( even if you are indeed a boy ). you must above all embrace your natural qualities and your personality traits as your strength and importance in society exist anyway and are great. you can have an even submissive personality, and that doesn't mean you don't have the right to be happy like that and have control over your life and your actions !<br>
+just remember that you deserve to be happy and respected, you are strong and lovely no matter how feminine or masculine you are, you can - and should - be purely yourself ♡<br>
+<br>
+<br>
+　✄ ⅱ<br>
+this recent subject about "npc" people is something that has been around for a long time, but with other names. i really think being a npc is a bad thing, but i'm seeing people using it as a baseless curse, i see people with clear group behavior using the term to get approved and feel superior to others. i believe that this whole thing can be very productive if seen and treated the right way, so i felt the need to write about it !<br>
+group behavior is basically what the idea of ​​being an npc is all about. it's about acting only in favor of the group, seeking approval from the group and always feel the need to be part of groups and overestimate this attitude as if it were something important. this is a purely instinctive and standard attitude of our species, so i believe it is natural and healthy to have group behavior during a phase of life, usually in adolescence, while we are still trying to perceive our individuality ( which has always been there, we have only forgotten who we are because puberty causes our hormones to take actions above who we really are, basically for the sake of the reproduction of the species ).<br>
+the problem of such attitudes is that they separate us from purity and consequently from happiness. as we are rational animals, group behavior, although natural and to make our brain release endorphins ( as instinctive approval ), makes us take actions that do not make us really happy. the pursuit of standards, mimic behavior, obeying rules that we don't really value, following trends that don't match our personality... all of this is extremely tiring and painful for us. the npc behavior is in fact something bad and that must be overcome, because although institive, is not ideal. you are not doing your best if you are acting as a group because you are an individual.<br>
+i see many people with npc behavior using this as offense because they relate specific things to "being an npc", such as using social media, having groups of friends, using slangs... but the thing is that group behavior is not something that it is necessarily shown through these attitudes, for a person can of their own volition want to have some of these attitudes, because it makes they happy. making the decision to have some natural, instinctive behavior as something that you truly value is an important and rational decision that is right for our ability. for example, i want to form a family, it's a group behavior and extremely instinctive : to live with my partner, to procreate, to take care of my group. but if i had made that decision only because it's the standard of our society, it could be sad for me and against my will as an individual ! i want to have a family because only the thought of it warms my heart and i know it is my pure wish.<br>
+the desire for stamina for group behavior can be replaced by other more useful and healthy attitudes such as helping others, striving for a cause that you truly value, giving gifts, giving compliments... the list goes on !<br>
+we don't have to obey our instincts, but they can guide us to important things if we are strong enough to make our own choices. ♡<br>
+<br>
+i hope this helps some people !!<br>
+<br>
+<br>
+xoxo <img src="https://i.imgur.com/HQofZSR.gif"/><br>
+<br><br>
+</font></font></font>
+
+<br>
+
+<center><img src="https://i.imgur.com/BrnUzQj.gif"/></center>
+
+<br><br><br>
+
+<br>
 <center><img src="https://i.imgur.com/pIedBae.gif"/><img src="https://i.imgur.com/pIedBae.gif"/></center>
 <br><br>
 <font size = 1><font color="#CBBBB1">
