--- a/gaming.html
+++ b/gaming.html
@@ -820,7 +820,7 @@ more shots <a href="https://goo.gl/photos/wYNb5uykMBGrwuJm9" id="linkhm" target=
 <div style ="width: 380px; height: 286px; overflow: auto; overflow-x: hidden; text-align: justify;">
 <div style ="width: 370; height: auto; overflow-y: hidden; overflow-x: hidden; text-align: justify;">
 this is officially the best character creation game in the universe ♡ !!!<br>
-i'm totally in love with it, i made myself and i'm honestly having a lot of fun, i can'tt get tired of trying on clothes and playing with the poses and angles ~<br>
+i'm totally in love with it, i made myself and i'm honestly having a lot of fun, i can't get tired of trying on clothes and playing with the poses and angles ~<br>
 cutest app ever, i'm so happy i found it ♡
 </div>
 <br><br>
@@ -829,9 +829,11 @@ cutest app ever, i'm so happy i found it ♡
 <img width="250" height="auto" src="https://i.imgur.com/pJhAX2U.png"/><br><br>
 <img width="250" height="auto" src="https://i.imgur.com/NE7vHN2.png"/><br><br>
 <img width="250" height="auto" src="https://i.imgur.com/6uZ78q2.png"/><br><br>
+<img width="250" height="auto" src="https://i.imgur.com/FnXeSBP.png"/><br><br>
 <img width="250" height="auto" src="https://i.imgur.com/NrFm2N5.png"/><br><br>
 <img width="250" height="auto" src="https://i.imgur.com/cc1WZXl.png"/><br><br>
 <img width="250" height="auto" src="https://i.imgur.com/KrCbCsb.png"/><br><br>
+<img width="250" height="auto" src="https://i.imgur.com/PpopRwm.png"/><br><br>
 <img width="250" height="auto" src="https://i.imgur.com/qx7T5MN.png"/><br><br>
 <img width="250" height="auto" src="https://i.imgur.com/7ulnWPM.png"/><br><br>
 <img width="250" height="auto" src="https://i.imgur.com/OCof8vq.png"/><br><br>
