--- a/faq.html
+++ b/faq.html
@@ -348,7 +348,7 @@ position: relative;
 <br><br><br>
 
 <a href="#tumblr"><font color="#d8b6b6">info about my tumblr</font></a><font color="#aa8f8f"> | </font><a href="#rules"><font color="#d8b6b6">chat rules</font></a><font color="#aa8f8f"> | </font><a href="#name"><font color="#d8b6b6">about my name</font></a><font color="#aa8f8f"> | </font><a href="#myself"><font color="#d8b6b6">about myself</font></a><font color="#aa8f8f"> | </font><a href="#argumentation"><font color="#d8b6b6">about my argumentation</font></a><font color="#aa8f8f"> | </font><a href="#dx"><font color="#d8b6b6">about self dx</font></a><font color="#aa8f8f"> | </font><a href="#agere"><font color="#d8b6b6">about agere &
- communities</font></a><font color="#aa8f8f"> | </font><a href="#words"><font color="#d8b6b6">about controversial words</font></a><font color="#aa8f8f"> | </font><a href="#numbers"><font color="#d8b6b6">about numbers</font></a><font color="#aa8f8f"> | </font><a href="#politics"><font color="#d8b6b6">about politics</font></a><font color="#aa8f8f"> | </font><a href="#internet"><font color="#d8b6b6">my internet past</font></a><font color="#aa8f8f"> | </font><a href="#pics"><font color="#d8b6b6">about disliking pics</font></a><font color="#aa8f8f"> | </font><a href="#cc"><font color="#d8b6b6">ccs, ids & kins</font></a><font color="#aa8f8f"> | </font><a href="#gxb"><font color="#d8b6b6">about girls x boys</font></a><font color="#aa8f8f"> | </font><a href="#ywot"><font color="#d8b6b6">ywot advice</font></a><font color="#aa8f8f"> | </font><a href="#astro"><font color="#d8b6b6">about astrology & similar</font></a><font color="#aa8f8f"> | </font><a href="#beauty"><font color="#d8b6b6">some beauty talk</font></a><font color="#aa8f8f"> | </font><a href="#fashion"><font color="#d8b6b6">some fashion talk</font></a><font color="#aa8f8f"> | </font><a href="#sexuality"><font color="#d8b6b6">about sexuality</font></a><font color="#aa8f8f"> | </font><a href="#purity"><font color="#d8b6b6">purity & innocence</font></a><font color="#aa8f8f"> | </font><a href="#media"><font color="#d8b6b6">social media issues general</font></a><font color="#aa8f8f"> | </font><a href="#live"><font color="#d8b6b6">about disliking lives</font></a><font color="#aa8f8f"> | </font><a href="#honest"><font color="#d8b6b6">honest opinion</font></a><font color="#aa8f8f"> | </font><a href="#cruelty-free"><font color="#d8b6b6">cruelty-free lifestyle</font></a><font color="#aa8f8f"> | </font><a href="#money"><font color="#d8b6b6">about money</font></a><font color="#aa8f8f"> | </font><a href="#individuality"><font color="#d8b6b6">about individuality</font></a><font color="#aa8f8f"> | </font><a href="#presence"><font color="#d8b6b6">about presence</font></a><font color="#aa8f8f"> | </font><a href="#immigration"><font color="#d8b6b6">about ( my ) immigration</font></a><font color="#aa8f8f"> | </font><a href="#religion"><font color="#d8b6b6">my religion</font></a><font color="#aa8f8f"> | </font><a href="#ruules"><font color="#d8b6b6">about rules</font></a><font color="#aa8f8f"> | </font><a href="#femininity"><font color="#d8b6b6">cuteness & femininity</font></a><font color="#aa8f8f"> | </font><a href="#group"><font color="#d8b6b6">group behavior</font></a><font color="#aa8f8f"> | </font><a href="#html"><font color="#d8b6b6">about web design</font></a><font color="#aa8f8f"> | </font><a href="#mybeauty"><font color="#d8b6b6">my beauty care</font></a><font color="#aa8f8f"> | </font><a href="#world"><font color="#d8b6b6">about this beautiful world</font></a><font color="#aa8f8f"> | </font><a href="#selfcare"><font color="#d8b6b6">about self care</font></a><font color="#aa8f8f"> | </font><a href="#trauma"><font color="#d8b6b6">trauma coping issues</font></a><font color="#aa8f8f"> | </font><a href="#virtual"><font color="#d8b6b6">virtual world issues</font></a>
+ communities</font></a><font color="#aa8f8f"> | </font><a href="#words"><font color="#d8b6b6">about controversial words</font></a><font color="#aa8f8f"> | </font><a href="#numbers"><font color="#d8b6b6">about numbers</font></a><font color="#aa8f8f"> | </font><a href="#politics"><font color="#d8b6b6">about politics</font></a><font color="#aa8f8f"> | </font><a href="#internet"><font color="#d8b6b6">my internet past</font></a><font color="#aa8f8f"> | </font><a href="#pics"><font color="#d8b6b6">about disliking pics</font></a><font color="#aa8f8f"> | </font><a href="#cc"><font color="#d8b6b6">ccs, ids & kins</font></a><font color="#aa8f8f"> | </font><a href="#gxb"><font color="#d8b6b6">about girls x boys</font></a><font color="#aa8f8f"> | </font><a href="#ywot"><font color="#d8b6b6">ywot advice</font></a><font color="#aa8f8f"> | </font><a href="#astro"><font color="#d8b6b6">about astrology & similar</font></a><font color="#aa8f8f"> | </font><a href="#beauty"><font color="#d8b6b6">some beauty talk</font></a><font color="#aa8f8f"> | </font><a href="#fashion"><font color="#d8b6b6">some fashion talk</font></a><font color="#aa8f8f"> | </font><a href="#sexuality"><font color="#d8b6b6">about sexuality</font></a><font color="#aa8f8f"> | </font><a href="#purity"><font color="#d8b6b6">purity & innocence</font></a><font color="#aa8f8f"> | </font><a href="#media"><font color="#d8b6b6">social media issues general</font></a><font color="#aa8f8f"> | </font><a href="#live"><font color="#d8b6b6">about disliking lives</font></a><font color="#aa8f8f"> | </font><a href="#honest"><font color="#d8b6b6">honest opinion</font></a><font color="#aa8f8f"> | </font><a href="#cruelty-free"><font color="#d8b6b6">cruelty-free lifestyle</font></a><font color="#aa8f8f"> | </font><a href="#money"><font color="#d8b6b6">about money</font></a><font color="#aa8f8f"> | </font><a href="#individuality"><font color="#d8b6b6">about individuality</font></a><font color="#aa8f8f"> | </font><a href="#presence"><font color="#d8b6b6">about presence</font></a><font color="#aa8f8f"> | </font><a href="#immigration"><font color="#d8b6b6">about ( my ) immigration</font></a><font color="#aa8f8f"> | </font><a href="#religion"><font color="#d8b6b6">my religion</font></a><font color="#aa8f8f"> | </font><a href="#ruules"><font color="#d8b6b6">about rules</font></a><font color="#aa8f8f"> | </font><a href="#femininity"><font color="#d8b6b6">cuteness & femininity</font></a><font color="#aa8f8f"> | </font><a href="#group"><font color="#d8b6b6">group behavior</font></a><font color="#aa8f8f"> | </font><a href="#html"><font color="#d8b6b6">about web design</font></a><font color="#aa8f8f"> | </font><a href="#mybeauty"><font color="#d8b6b6">my beauty care</font></a><font color="#aa8f8f"> | </font><a href="#world"><font color="#d8b6b6">about this beautiful world</font></a><font color="#aa8f8f"> | </font><a href="#selfcare"><font color="#d8b6b6">about self care</font></a><font color="#aa8f8f"> | </font><a href="#trauma"><font color="#d8b6b6">trauma coping issues</font></a><font color="#aa8f8f"> | </font><a href="#virtual"><font color="#d8b6b6">virtual world issues</font></a><font color="#aa8f8f"> | </font><a href="#rivalry"><font color="#d8b6b6">the girls' rivalry</font></a>
 <br>
 <br><br>
 <font color="#d1b9b1"><font size="2">※</font> there will be updates and new topics from time to time</font>
@@ -1186,6 +1186,50 @@ p { margin: 0; }
 }());
 </script>
 
+　　　　　　　　♡ <a id="linkbjinho" data-target="spoiler5id" class="btn-spoiler5id">pom's alice</a><br>
+
+<div id="spoiler5id" class="spoiler-area5id is-closed5id">
+<!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
+<br>
+<center><img width="250" height="auto" src="https://i.imgur.com/zaOf0aP.png"/></center><br><br>
+<center><img width="250" height="auto" src="https://i.imgur.com/jOT7gxO.png"/></center><br><br>
+<center><img width="250" height="auto" src="https://i.imgur.com/KBA6iGp.png"/></center>
+<br><br>
+</div><!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
+<style>
+p { margin: 0; }
+.spoiler-area5id {
+
+}
+.spoiler-area5id.is-closed5id { height: 0; overflow: hidden; padding: 10px 0 0; }
+</style>
+<script>
+(function(){
+    "use strict";
+    var $btns = document.querySelectorAll('.btn-spoiler5id');
+    function loop($els, cb) {
+        var i = $els.length;
+        while(i--) {
+            cb($els[i]);
+        }
+    }
+    loop($btns, function($btn){
+        $btn.addEventListener("click", function(){
+            var $spoiler = document.getElementById(this.getAttribute("data-target"));
+            if( this.innerHTML === "pom's alice" ){
+                this.innerHTML = "pom's alice ˣ";
+                $spoiler.classList.remove("is-closed5id");
+            } else {
+                this.innerHTML = "pom's alice";
+                $spoiler.classList.add("is-closed5id");
+            }
+        });
+
+    });
+
+}());
+</script>
+
 　　　　　　　　♡ <a id="linkbjinho" data-target="spoiler2id" class="btn-spoiler2id">kagome</a><br>
 
 <div id="spoiler2id" class="spoiler-area2id is-closed2id">
@@ -1794,6 +1838,20 @@ i learned over time that the virtual world may seem "perfect" and incredible, ju
 the internet can be very useful for learning new things, interacting with people from all over the world, personal improving, and even for sorts of important jobs and hobbies, which is why i love the internet and value it. but the internet can only stimulate our sight and hearing, and we have five senses. only real life can stimulate all five senses and bring us full life experiences full of sensations and feelings !!<br>
 you can't eat freshly picked wild berries, you can't feel the scent of flowers, you can't pet a fluffy animal, you can't hug people you love over the internet. don't substitute your real time for the virtual, it's not worth it. the internet has many limitations, it is inferior in comparison.<br>
 and just as all experiences are much more intense and wonderful in real life, you too can only be as perfect and better as possible in real life. the virtual identity that we create exists to allow us to introduce others who are far from us, we can put together the best visuals we can offer and we can also publish works and receive reviews and feedback, we can learn and improve ; but you really are much more special with all the details. your image and voice are not all you have to offer, you in real life are a complete person and if you focus on improving yourself as a whole and not only superficially, you can enjoy the virtual world and the world real in the best way possible : beneficial, fun and above all, healthy ♡ !<br>
+<br><br><br><br><br><br>
+</font>
+
+<a name="rivalry" id="rivalry"></a>
+<sub><sub><img src="https://i.imgur.com/xuXKSIc.gif"></sub></sub><font color="#c4afa8">　how can the girls' rivalry be good ?</font><br><br><br>
+<font color="#d8b9af">　( december . 20 . 2018 )</font>
+<br><br>
+<font color="#B1A69E">
+i always see people talking about the girls' rivalry very aggressively, as if girls hated and competed with each other all the time.. i've been thinking a lot about it because i've always seen rivalry in a positive way in my life, but it was not always positive. i think i've come up with an explanation about it that makes a lot of sense :<br>
+to begin with, girls naturally rival each other, differently than boys do. boys also compete, but usually in more objective situations, as in a specific competition or at a specific point to achieve a goal. this type of competition is what we see in games, for example. it's frustrating if you lose, but however mature enough to deal with, that's okay ; it's nothing personal. this type of competition happens between boys and girls alike, but it is not the same as female rivalry.<br>
+female rivalry is something very subjective, and that's exactly why it's so interesting, and productive. when girls compare themselves with others in an objective way, they feel sad and can feel envy, which is bad and destructive to self-esteem and relationships ; but this is just a wrong and immature way of dealing with female rivalry ! it doesn't have to be this way ; ;<br>
+i've suffered comparing myself directly to other girls, but i've learned that healthy rivalry is when you compare yourself subjectively. all girls tend to have life goals that are naturally very subjective, which even they can't perceive. it's those kinds of goals that you couldn't write exactly in a list and just take some steps to get there - in fact, you might never get there - and that's extremely motivating ♡ !!!<br>
+comparing yourself to other girls looking at them as inspirations and looking at their achievements as motivation is something that always makes me feel very happy and inspired to be a better girl as well. to be a better person. i feel extremely motivated when i meet a girl who has life goals similar to mine ( things like being a purer, gentler, wiser person ) and on the same level that i feel that i don't want to lose to her, i don't want to be behind her, i want to reach her !! just as i want to be free to follow my own path, not hers ; i want to be just as a good girl as she is, not to be exactly like her. i want to be myself, the best i can be. seeing other girls being the best they can be fills my heart with joy and i definitely consider them rivals ! i want them to get better every day, just like me ♡ !!<br>
+the rivalry between girls is something wonderful and incredible, not for compare us objectively, but subjectively.<br>
 <br><br><br><br>
 </font>
 
