--- a/status.html
+++ b/status.html
@@ -357,7 +357,7 @@ position: relative;
 
 
 <div style="font-family: Verdana; font-size:10px; overflow-y: hidden; position: absolute; width: 150px;height: 100px;overflow-x: hidden; padding-left: 165px; padding-top: 248px; z-index: 20;"><br><br>
-<img src="https://i.imgur.com/BMoFm81.gif">　<font color="#a59990" style="border-bottom:1px dashed #d8c0ad; padding-bottom: 3px;">feeling : </font><font color="#d8b1b1" style="border-bottom:1px dashed #d8c0ad; padding-bottom: 3px;">ill</font> <img src="https://i.imgur.com/n5Q1wn1.gif">
+<img src="https://i.imgur.com/BMoFm81.gif">　<font color="#a59990" style="border-bottom:1px dashed #d8c0ad; padding-bottom: 3px;">feeling : </font><font color="#d8b1b1" style="border-bottom:1px dashed #d8c0ad; padding-bottom: 3px;">proud</font> <img src="https://i.imgur.com/0Cdmh22.gif">
 <br><br><br>
 　　　　　<sub><img width="12px" height="auto" src="https://i.imgur.com/tJrZd34.gif"></sub>　<a href="https://photos.app.goo.gl/iLTeYQh8XpPmmA6Q2"target="_blank"><font color="#a59990" style="font-size:6px;">archive</font></a>　<sub><img width="12px" height="auto" src="https://i.imgur.com/tJrZd34.gif"></sub>
 </div>
@@ -367,6 +367,9 @@ position: relative;
 <div style="padding-left: 163px; padding-top: 130px;">
 <div style="padding: 2px; position: absolute; font-family: Verdana; font-size:10px; width: 270px; height: 120px; overflow-x: hidden; z-index: 30; text-align:justify; line-height: 100%">
 
+　<sub><img src="https://i.imgur.com/UvUc3xP.gif"></sub> <font color="#c9d5e5" style="border-bottom:1px dashed #d8c0ad;"><sup>12.20.18</sup></font> <font color="#a0acbc">→</font>　a very merry xmas *.(๓´͈ ˘ `͈๓).*﻿
+
+<br><br><br>
 　<sub><img src="https://i.imgur.com/9LP84Nr.gif"></sub> <font color="#b7cccc" style="border-bottom:1px dashed #d8c0ad;"><sup>12.06.18</sup></font> <font color="#9cb7b7">→</font>　i have a terrible fever ;///;
 
 <br><br><br>
@@ -392,9 +395,6 @@ position: relative;
 
 <br><br><br>
 　<sub><img src="https://i.imgur.com/8j82Hn6.gif"></sub> <font color="#e0a6a6" style="border-bottom:1px dashed #d8c0ad;"><sup>08.22.18</sup></font> <font color="#c48d8d">→</font>　i'm feeling so light and shiny ♡ !
-
-<br><br><br>
-　<sub><img src="https://i.imgur.com/UvUc3xP.gif"></sub> <font color="#c9d5e5" style="border-bottom:1px dashed #d8c0ad;"><sup>08.08.18</sup></font> <font color="#a0acbc">→</font>　-ˏˋ one year of middlepot.com ˊˎ-
 
 
 </div>
