--- a/gaming.html
+++ b/gaming.html
@@ -1147,7 +1147,8 @@ l o v e　n i k k i
 <div style ="width: 380px; height: 286px; overflow: auto; overflow-x: hidden;text-align: justify;">
 <div style ="width: 370; height: auto; overflow-y: hidden; overflow-x: hidden; text-align: justify;">
 in search of dress up games that i have never heard of, i found this wonderful game with beautiful styles !!!<br>
-i'm really enjoying it, although it's a bit too easy, so i know it will be boring in a while.
+<b>edit //</b> after a long time, i decided to return to this lovely game and play seriously.<br>
+unlike most dress up games, you don't have to spend money on it to get beautiful outfits and have fun, so it's a good option ♡ !
 </div>
 <br><br><center>
 <img width="250" height="auto" src="https://i.imgur.com/V0VNFDO.png"/><br><br>
