--- a/status.html
+++ b/status.html
@@ -367,6 +367,9 @@ position: relative;
 <div style="padding-left: 163px; padding-top: 130px;">
 <div style="padding: 2px; position: absolute; font-family: Verdana; font-size:10px; width: 270px; height: 120px; overflow-x: hidden; z-index: 30; text-align:justify; line-height: 100%">
 
+　<sub><img src="https://i.imgur.com/8j82Hn6.gif"></sub> <font color="#e0a6a6" style="border-bottom:1px dashed #d8c0ad;"><sup>01.03.19</sup></font> <font color="#c48d8d">→</font>　i'm so happy ♡ !!
+
+<br><br><br>
 　<sub><img src="https://i.imgur.com/UvUc3xP.gif"></sub> <font color="#c9d5e5" style="border-bottom:1px dashed #d8c0ad;"><sup>12.20.18</sup></font> <font color="#a0acbc">→</font>　a very merry xmas *.(๓´͈ ˘ `͈๓).*﻿
 
 <br><br><br>
@@ -392,9 +395,6 @@ position: relative;
 
 <br><br><br>
 　<sub><img src="https://i.imgur.com/pV6N95R.gif"></sub> <font color="#e0c5f1" style="border-bottom:1px dashed #d8c0ad;"><sup>09.08.18</sup></font> <font color="#bea5ce">→</font>　love is always the answer ♡ . * ･
-
-<br><br><br>
-　<sub><img src="https://i.imgur.com/8j82Hn6.gif"></sub> <font color="#e0a6a6" style="border-bottom:1px dashed #d8c0ad;"><sup>08.22.18</sup></font> <font color="#c48d8d">→</font>　i'm feeling so light and shiny ♡ !
 
 
 </div>
