--- a/gaming.html
+++ b/gaming.html
@@ -813,6 +813,44 @@ more shots <a href="https://goo.gl/photos/wYNb5uykMBGrwuJm9" id="linkhm" target=
 <div class="wrapper">
 <br>
 <center><sub><img src="https://i.imgur.com/CARPAP1.gif"/></sub>　
+t o m o t o r u
+　<sub><img src="https://i.imgur.com/CARPAP1.gif"/></sub></center>
+<br><br>
+<div class="tooltip">
+<div style ="width: 380px; height: 286px; overflow: auto; overflow-x: hidden;text-align: justify;">
+<div style ="width: 370; height: auto; overflow-y: hidden; overflow-x: hidden; text-align: justify;">
+this one is officially the absolutely cutest game that exists. trust me, it is.
+</div>
+<br><br><center>
+<img width="300" height="auto" src="https://i.imgur.com/14E99nR.png"/><br><br>
+
+<img width="300" height="auto" src="https://i.imgur.com/wPmZ9wv.png"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/ETTy4on.png"/><br><br>
+
+<img width="300" height="auto" src="https://i.imgur.com/0wA38SR.jpg"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/CJAQXb4.jpg"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/77shQAg.jpg"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/92DDtz3.jpg"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/IE9gSaK.jpg"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/fVQHdyn.jpg"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/eqykBwL.jpg"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/Ttyfako.jpg"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/EkHnWeG.jpg"/><br><br>
+
+</center>
+
+<br>
+<center>more cuteness <a href="https://photos.app.goo.gl/NfgqqgVzFLFsQdQe8" id="linkhm" target="_blank">here</a> !</center>
+<br><br>
+
+</div>
+</div>
+</div>
+
+<br><br>
+<div class="wrapper">
+<br>
+<center><sub><img src="https://i.imgur.com/CARPAP1.gif"/></sub>　
 カスタムキャスト　- custom cast -
 　<sub><img src="https://i.imgur.com/CARPAP1.gif"/></sub></center>
 <br><br>
@@ -1151,20 +1189,26 @@ in search of dress up games that i have never heard of, i found this wonderful g
 unlike most dress up games, you don't have to spend money on it to get beautiful outfits and have fun, so it's a good option ♡ !
 </div>
 <br><br><center>
-<img width="250" height="auto" src="https://i.imgur.com/V0VNFDO.png"/><br><br>
-<img width="300" height="auto" src="https://i.imgur.com/xXpzz0r.jpg"/><br><br>
-<img width="300" height="auto" src="https://i.imgur.com/YueUfy0.jpg"/><br><br>
-<img width="300" height="auto" src="https://i.imgur.com/gMCz3K1.jpg"/><br><br>
-<img width="300" height="auto" src="https://i.imgur.com/f4JMX0W.jpg"/><br><br>
-<img width="300" height="auto" src="https://i.imgur.com/FitLVpw.jpg"/><br><br>
-<img width="300" height="auto" src="https://i.imgur.com/yElkvDr.jpg"/><br><br>
-<img width="300" height="auto" src="https://i.imgur.com/mj86aXP.jpg"/><br><br>
-<img width="300" height="auto" src="https://i.imgur.com/zm0bc5d.jpg"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/ml48fW2.png"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/ZaFGXjE.png"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/blGWvro.png"/><br><br>
+
+<img width="300" height="auto" src="https://i.imgur.com/04FKbLR.png"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/f9Kjx3j.png"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/S3iaIIv.png"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/rPMKoLY.png"/><br><br>
+
+<img width="300" height="auto" src="https://i.imgur.com/zs3CL5F.png"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/8gbVlyg.png"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/uuDaQjH.png"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/5lNNRty.png"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/YYnPvhu.png"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/ALMeDVo.png"/><br><br>
 
 </center>
 
 <br>
-<center>more styles <a href="https://photos.app.goo.gl/nKoAmelMxYC7HxbA3" id="linkhm" target="_blank">here</a> !</center>
+<center>more images <a href="https://photos.app.goo.gl/nKoAmelMxYC7HxbA3" id="linkhm" target="_blank">here</a> !</center>
 <br><br>
 
 </div>
@@ -1186,7 +1230,9 @@ i'll certainly post here some cute girls that i made ♡ !!<br>
 </div>
 <br><br>
 <center>
-<img width="300" height="auto" src="https://i.imgur.com/EWzT245.png"/>
+<img width="300" height="auto" src="https://i.imgur.com/EWzT245.png"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/xs19tqC.png"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/PvAaMAS.png"/>
 
 <br><br></center>
 
