--- a/gaming.html
+++ b/gaming.html
@@ -1029,6 +1029,63 @@ sound voltex is an AMAZING game. unfortunately i only had opportunity to play on
 <div class="wrapper">
 <br>
 <center><sub><img src="https://i.imgur.com/CARPAP1.gif"/></sub>　
+z e p e t o
+　<sub><img src="https://i.imgur.com/CARPAP1.gif"/></sub></center>
+<br><br>
+<div class="tooltip">
+<div style ="width: 380px; height: 286px; overflow: auto; overflow-x: hidden; text-align: justify;">
+<div style ="width: 370; height: auto; overflow-y: hidden; overflow-x: hidden; text-align: justify;">
+this game got lame really fast.. LOL<br>
+still cute tho, i love taking pics with friends ♡ !!
+</div>
+<br><br><center>
+<img width="300" height="auto" src="https://i.imgur.com/JWeMFnB.png"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/juRjDbt.png"/><br><br>
+
+<img width="300" height="auto" src="https://i.imgur.com/6iPSZRr.png"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/oPuWO5W.png"/><br><br>
+
+<img width="300" height="auto" src="https://i.imgur.com/2VXqp49.png"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/BYluxLX.png"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/KQyVs0S.png"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/j3SL0lF.png"/>
+</center>
+<br><br>
+</div>
+</div>
+</div>
+
+<br><br>
+<div class="wrapper">
+<br>
+<center><sub><img src="https://i.imgur.com/CARPAP1.gif"/></sub>　
+p i c r e w . m e
+　<sub><img src="https://i.imgur.com/CARPAP1.gif"/></sub></center>
+<br><br>
+<div class="tooltip">
+<div style ="width: 380px; height: 286px; overflow: auto; overflow-x: hidden; text-align: justify;">
+<div style ="width: 370; height: auto; overflow-y: hidden; overflow-x: hidden; text-align: justify;">
+friends recommended me this site that has lots of dress up games, these are my fav ones !!
+</div>
+<br><br><center>
+<img width="300" height="auto" src="https://i.imgur.com/ek6DdVi.png"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/cLuh5lL.png"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/IdjVtJX.png"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/swqZ1xD.png"/><br><br>
+
+<img width="300" height="auto" src="https://i.imgur.com/9EOgao6.png"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/loN5tKv.png"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/x2gI1Xc.png"/>
+</center>
+<br><br>
+</div>
+</div>
+</div>
+
+<br><br>
+<div class="wrapper">
+<br>
+<center><sub><img src="https://i.imgur.com/CARPAP1.gif"/></sub>　
 t h e　s i m s
 　<sub><img src="https://i.imgur.com/CARPAP1.gif"/></sub></center>
 <br><br>
@@ -1194,6 +1251,7 @@ unlike most dress up games, you don't have to spend money on it to get beautiful
 <img width="300" height="auto" src="https://i.imgur.com/blGWvro.png"/><br><br>
 
 <img width="300" height="auto" src="https://i.imgur.com/04FKbLR.png"/><br><br>
+<img width="300" height="auto" src=https://i.imgur.com/RAvyyAW.png"/><br><br>
 <img width="300" height="auto" src="https://i.imgur.com/f9Kjx3j.png"/><br><br>
 <img width="300" height="auto" src="https://i.imgur.com/S3iaIIv.png"/><br><br>
 <img width="300" height="auto" src="https://i.imgur.com/rPMKoLY.png"/><br><br>
