--- a/links.html
+++ b/links.html
@@ -346,7 +346,7 @@ position: relative;
 <div style="position:relative; float:right;">
 <sub><img src="https://i.imgur.com/3LZD5fp.gif"></sub><font color="#c1a98b">
  html stuff :</font><br><br>
-<div style="width: 97px; height: 50px; overflow-x:hidden;">
+<div style="width: 110px; height: 50px; overflow-x:hidden;">
 <a id="ooo" title="my first layout ever" href="https://kawaii.info.gf" target="_blank" >kawaii.info.gf</a>
 <br>
 <a id="ooo" title="???" href="https://soft.root.sx" target="_blank" >soft.root.sx</a>
@@ -359,7 +359,7 @@ position: relative;
 <br>
 <a id="ooo" title="unicode converter" href="https://safe.cyberlove.us" target="_blank" >safe.cyberlove.us</a>
 <br>
-<a id="ooo" title="html test" href="https://milk.honey.my" target="_blank" >milk.honey.my</a>
+<a id="ooo" title="html test" href="https://honey.bearfacts.net" target="_blank" >honey.bearfacts.net</a>
 <br>
 <a id="ooo" title="offline ywot" href="https://rosy.latteart.fi" target="_blank" >rosy.latteart.fi</a>
 </div>
