--- a/gaming.html
+++ b/gaming.html
@@ -1068,14 +1068,58 @@ p i c r e w . m e
 friends recommended me this site that has lots of dress up games, these are my fav ones !!
 </div>
 <br><br><center>
+<img width="300" height="auto" src="https://i.imgur.com/OMqmwT8.png"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/rKWm2zo.png"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/vq4OqTV.png"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/P0bBrCs.png"/><br><br>
+
 <img width="300" height="auto" src="https://i.imgur.com/ek6DdVi.png"/><br><br>
 <img width="300" height="auto" src="https://i.imgur.com/cLuh5lL.png"/><br><br>
 <img width="300" height="auto" src="https://i.imgur.com/IdjVtJX.png"/><br><br>
 <img width="300" height="auto" src="https://i.imgur.com/swqZ1xD.png"/><br><br>
 
+<img width="300" height="auto" src="https://i.imgur.com/baWR1zT.png"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/hkOpsKu.png"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/u3ody0n.png"/><br><br>
+
 <img width="300" height="auto" src="https://i.imgur.com/9EOgao6.png"/><br><br>
 <img width="300" height="auto" src="https://i.imgur.com/loN5tKv.png"/><br><br>
-<img width="300" height="auto" src="https://i.imgur.com/x2gI1Xc.png"/>
+<img width="300" height="auto" src="https://i.imgur.com/x2gI1Xc.png"/><br><br>
+
+<img width="300" height="auto" src="https://i.imgur.com/ySCnkdC.png"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/2ybnplu.png"/><br><br>
+
+<img width="300" height="auto" src="https://i.imgur.com/px4F2Bd.png"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/Ox2vjTo.png"/><br><br>
+
+<img width="300" height="auto" src="https://i.imgur.com/yUo0eNz.png"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/SiZw9Tb.png"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/F5q66lH.png"/><br><br>
+
+<img width="300" height="auto" src="https://i.imgur.com/iudbB41.png"/><br><br>
+
+<img width="300" height="auto" src="https://i.imgur.com/BtrEUMA.png"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/wHtrBBB.png"/><br><br>
+
+<img width="300" height="auto" src="https://i.imgur.com/VjAvgGm.png"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/DEfUpF2.png"/><br><br>
+
+<img width="300" height="auto" src="https://i.imgur.com/fk7gNtG.png"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/zD0VMlp.png"/><br><br>
+</center>
+
+<div style ="width: 370; height: auto; overflow-y: hidden; overflow-x: hidden; text-align: justify;">
+now, these are from a similar site, charat.me :
+</div>
+<br><br><center>
+
+<img width="300" height="auto" src="https://i.imgur.com/BDQAl6N.png"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/NVSWh0w.png"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/RYHUAgr.png"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/TZURQZs.png"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/0yUXkEh.png"/>
+
+
 </center>
 <br><br>
 </div>
